<resources>
    <string name="app_name">WeatherChallenge</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Weather Forecast</string>
    <string name="weather_title">Weather in </string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_forecast">Forecast</string>
    <string name="no_data_msg">No data available</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind Speed</string>
    <string name="humidity">Humidity</string>
    <string name="feels_like">Feels Like</string>

</resources>